# reactjs-helper

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  ingestion.py  main.py  pyproject.toml  supervisord.conf
core/: settings.py  urls.py
home/: urls.py  views.py
home/templates/: index.html
ingestion/: run.py  sources.json
tools/: converse.py
tools/vectorstore/: __init__.py  base.py  faiss.py  qdrant.py
vectorstore/: index.faiss  index.pkl
