[tool.poetry]
name = "reactjs-helper"
version = "0.1.0"
description = "LLM-powered React Documentation Helper"
authors = ["Drixler Angelo <drixler97@gmail.com>"]
license = "BSD 3-Clause License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.4"
djangorestframework = "^3.15.1"
langchain = "^0.2.6"
langchain-community = "^0.2.6"
langchain-google-genai = "^1.0.7"
langchain-openai = "^0.1.14"
python-dotenv = "^1.0.1"
faiss-cpu = "^1.8.0"
sentence-transformers = "^2.7.0"
torch = { version = "^2.3.0", source="torch"}
torchaudio = { version = "^2.3.0", source="torch"}
torchvision = { version = "^0.18.0", source="torch"}
langchain-huggingface = "^0.0.3"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
